media/css/firefox/whatsnew/whatsnew-88-en.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/components/notification-bar';
@import 'includes/header';


//* -------------------------------------------------------------------------- */
// Main content
.wnp-content-main {
    padding: 0;
    text-align: center;

    @media #{$mq-tall} {
        padding-top: $layout-md;
        margin-bottom: $layout-lg;
    }
}

.wnp-main-image {
    margin: 0 auto $layout-sm;
}

.c-animated-graphic {
    width: 100%;
    max-width: 450px;
    display: block;
    margin: 0 auto $layout-sm;

    &.wnp-vid-1 {
        max-width: 620px;
    }
}

.wnp-main-title {
    @include text-title-md;
    color: get-theme('title-text-color');
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;

    strong {
        color: $color-violet-50;
    }
}

.wnp-main-tagline {
    @include text-body-lg;
    max-width: $content-md;
    margin-left: auto;
    margin-right: auto;
}

.wnp-platforms {
    text-align: center;
    margin: 0 auto $layout-lg;
    max-width: $content-md;

    h2 {
        @include text-title-xs;
        margin-bottom: $spacing-lg;
    }

    svg {
        height: 48px;
        display: inline-block;
        margin: 0 $spacing-sm;

        .dark {
            fill: get-theme('body-text-color');
        }
    }
}


//* -------------------------------------------------------------------------- */
// Extra content
// To be replaced by revamped picto card. See https://github.com/mozilla/protocol/issues/382

.c-picto-block {
    @include border-box;
    margin: 0 auto $spacing-2xl;
    max-width: $content-md - ($layout-md * 2);
    padding: 0 $layout-md;

    .c-picto-block-title {
        @include text-title-xs;
        color: get-theme('title-text-color');
    }

    .c-picto-block-image {
        align-items: center;
        display: flex;
        justify-content: center;
        margin: 0 auto $spacing-lg;
        max-width: $content-xs;
        min-height: $layout-md;
    }
}

@media #{$mq-md} {
    .l-columns-two,
    .l-columns-three {
        display: flex;
        margin: 0 auto;
        max-width: $content-lg;
        padding: 0 $layout-md;
        flex-wrap: wrap;

        .c-picto-block {
            flex: 1 1 50%;
            padding: 0 $layout-lg;
        }
    }
}

@media #{$mq-lg} {
    .l-columns-three {
        display: flex;
        margin: 0 auto;
        max-width: none;

        .c-picto-block {
            flex: 1 1 33.3%;
            padding: 0 $layout-xs;
        }
    }
}


//* -------------------------------------------------------------------------- */
// Utilities (link to release notes)
.c-utilities {
    @include text-body-sm;
    max-width: $content-md;
    padding-bottom: $layout-xl;
    text-align: center;
}

//* -------------------------------------------------------------------------- */
// Flux
.flux {
    display: inline-block;
    cursor: url("/media/img/firefox/whatsnew/whatsnew88-en/flux.cur"), pointer;
}

